fixed issue with the body shifting while hovering over navbar active menu item.

--- a/app/assets/stylesheets/beach/navbar.css.scss
+++ b/app/assets/stylesheets/beach/navbar.css.scss
@@ -53,6 +53,7 @@
     background: none;
     @include box-shadow(none);
     border-bottom: 2px solid $beach-b;
+    margin-bottom: 8px;
 
     &:hover{
       color: $white;
